Localization Context menu authorization Removed unused class and use new java features